--- a/style.css
+++ b/style.css
@@ -1,8 +1,37 @@
-/* navbar */
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    background-color: #f1f1f1;
+body {
+    font-family: arial;
+}
+
+.header {
+    background-color: #F1F1F1;
+    text-align: center;
+    padding: 20px;
   }
+
+  .column {
+    float: left;
+    width: 33.33%;
+    padding: 2px;
+  }
+
+  .card {
+    margin: auto;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+  
+/*   .container {
+    padding: 2px 16px;
+  } */
+
+/* Grid */
+.parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 5px;
+    grid-row-gap: 4px;
+    }
