--- a/style.css
+++ b/style.css
@@ -3,19 +3,14 @@ body {
 }
 
 .header {
-    background-color: #F1F1F1;
+    background-color: pink;
     text-align: center;
-    padding: 20px;
-  }
-
-  .column {
-    float: left;
-    width: 33.33%;
-    padding: 2px;
+    padding: 10px;
   }
 
   .card {
-    margin: auto;
+    padding: 5px;
+    margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
@@ -31,7 +26,7 @@ body {
 .parent {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    grid-template-rows: 1fr;
     grid-column-gap: 5px;
     grid-row-gap: 4px;
     }
