--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: arial;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 img {
@@ -11,6 +13,12 @@ img {
   text-align: center;
 }
 
+.laptopDiv {
+  margin: 0 auto;
+  margin-top: 15px;
+  width: 50%;
+}
+
 .header {
     background-color: pink;
     text-align: center;
@@ -18,12 +26,24 @@ img {
   }
 
   .card {
+    width: 250px;
     padding: 5px;
     margin: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
   .card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+  .laptopCard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+  }
+  .laptopCard:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
@@ -38,7 +58,6 @@ img {
    
 th, td {
   padding: 15px;
-  border: 1px solid black;
 }
 
 .redButton {
