--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     font-family: arial;
-    margin-left: 100px;
-    margin-right: 100px;
 }
 
 img {
   width: 100px;
   height: 100px;
+}
+
+li {
+	font-size: 12px;
 }
 
 .center {
@@ -16,7 +18,7 @@ img {
 .laptopDiv {
   margin: 0 auto;
   margin-top: 15px;
-  width: 50%;
+  width: 75%;
 }
 
 .header {
@@ -28,7 +30,7 @@ img {
   .card {
     width: 250px;
     padding: 5px;
-    margin: 10px;
+    margin: 20px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
   }
